Fix: remove text-align from .footer-container
*Substitute text-align with align-items: center

--- a/styles.css
+++ b/styles.css
@@ -43,9 +43,8 @@ a {
     background-color: #1F2937;
     color: #F9FAF8;
     font-size: 18px;
-    text-align: center;
     display: flex;
-    text-align: center;
+    align-items: center;
     justify-content: center;
     padding: 30px;
 }
